--- a/templates/settings.html
+++ b/templates/settings.html
@@ -73,7 +73,7 @@
         </div>
         <!-- Button -->
         <div class="submit-button">
-          <button id="submit" type="submit">Change Password</button>
+          <button id="submit" type="submit">Change</button>
         </div>
       </form>
     </main>
