--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -39,11 +39,11 @@
 
     <main class="main-section">
         <div class="tasks-main">
-            <div>Tasks</div>
+            <div class="page-header">Tasks</div>
             <form action="/add" method="post">
                 <div class="input-field">
                     <input type="text" name="title" placeholder="Add your task"></input>
-                    <button type="submit"
+                    <button class="add-button" type="submit"
                         <i class="fas fa-plus"></i>
                     </button>
                 </div>
