final css changes

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -38,12 +38,12 @@
     </nav>
 
     <main class="main-section">
-        <div class="tasks-main">
+        <div class="wrapper">
             <div class="page-header">Tasks</div>
             <form action="/add" method="post">
                 <div class="input-field">
                     <input type="text" name="title" placeholder="Add your task"></input>
-                    <button class="add-button" type="submit"
+                    <button type="submit">
                         <i class="fas fa-plus"></i>
                     </button>
                 </div>
