--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
 }
+ /* top navbar */
 
 .top-navbar {
   display: flex;
@@ -16,7 +17,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color:#121212;
-  color: white;
+  color: #ffffff;
 }
 
 .brand-title {
@@ -101,6 +102,8 @@ body {
   }
 }
 
+/* sidebar */
+
 .sidebar {
   position: fixed;
   left: 0;
@@ -163,6 +166,7 @@ body {
   white-space: nowrap;
 }
 
+/* main section of all pages except tasks */
 .main-section {
   display: flex;
   flex-direction: column;
@@ -194,3 +198,93 @@ body {
   padding: 10px 20px;
   transition: 0.3s;
 }
+
+.submit-button button:hover {
+  background-color: #c291ff;
+}
+
+/* Tasks page */
+
+.wrapper {
+  max-width: 400px;
+  width: 100%;
+  margin: 120px auto;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 15px #cfcfcf;
+  color: #ffffff;
+  background-color: #121212;
+}
+
+.wrapper .input-field {
+    margin: 2px 0;
+    width: 100%;
+    display: flex;
+    height: 45px;
+}
+
+.input-field input {
+  width: 85%;
+  height: 100%;
+  outline: none;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  font-size: 17px;
+  padding-left: 15px;
+}
+
+.input-field button {
+  width: 50px;
+  height: 100%;
+  border: none;
+  color: #fff;
+  margin-left: 5px;
+  font-size: 20px;
+  outline: none;
+  background: #bb86fc;
+  cursor: pointer;
+  opacity: 0.6;
+  border-radius: 3px;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+
+.input-field button:hover {
+  background-color: #c291ff;
+}
+
+.input-field button.active{
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.list-items {
+  padding-inline-start: 0px;
+}
+
+.list-items li {
+  list-style: none;
+  height: 45px;
+  line-height: 45px;
+  position: relative;
+  background: #555;
+  border-radius: 3px;
+  margin-bottom: 8px;
+  padding: 0 15px;
+  overflow: absolute;
+}
+
+.list-items li span {
+  position: absolute;
+  right: 0px;
+  background-color: #e74c3c;
+  width: 45px;
+  text-align: center;
+  border-radius: 0 3px 3px 0;
+  cursor: pointer;
+}
+
+.fa-trash {
+  color: white;
+}
+
