css and readme changes

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
 
       <form class="login-form" action="/login" method="post">
         <!-- username -->
-        <div>
+        <div class="form-input">
           <input
             autocomplete="off"
             name="username"
@@ -34,7 +34,7 @@
           />
         </div>
         <!-- password -->
-        <div>
+        <div class="form-input">
           <input
             name="password"
             placeholder="Password"
