--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
 
       <form class="register-form" action="/register" method="post">
         <!-- username -->
-        <div>
+        <div class="form-input">
           <input
             type="text"
             id="name"
@@ -34,7 +34,7 @@
           />
         </div>
         <!-- password -->
-        <div>
+        <div class="form-input">
           <input
             type="password"
             id="pass"
@@ -43,7 +43,7 @@
           />
         </div>
         <!-- confirmation -->
-        <div>
+        <div class="form-input">
           <input
             type="password"
             id="pass1"
