--- a/templates/settings.html
+++ b/templates/settings.html
@@ -42,7 +42,7 @@
       <div class="page-header">Settings</div>
       <form action="/settings" method="post">
         <!-- Old Password -->
-        <div>
+        <div class="form-input">
           <input
             type="password"
             id="oldpass"
@@ -53,7 +53,7 @@
           />
         </div>
         <!-- New Password -->
-        <div>
+        <div class="form-input">
           <input
             type="password"
             id="pass"
@@ -63,7 +63,7 @@
         </div>
 
         <!-- Confirm Password -->
-        <div>
+        <div class="form-input">
           <input
             type="password"
             id="pass1"
