--- a/static/css/style.css
+++ b/static/css/style.css
@@ -181,6 +181,20 @@ body {
   padding: 10px;
 }
 
+.form-input {
+  padding: 7px;
+}
+
+.form-input input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  font-size: 17px;
+  padding-left: 15px;
+}
+
 .submit-button {
   display: flex;
   justify-content: center;
