--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -22,6 +22,12 @@
             <span class="title">Tasks</span>
           </a>
         </li>
+        <li>
+          <a class="sidebar-link" href="">
+          <span class="icon"><i class="fas fa-calendar-alt"></i></span>
+          <span class="title">Calendar</span>
+          </a>
+        </li>
         <li class="sidebar-item">
           <a class="sidebar-link" href="/settings">
             <span class="icon"><i class="fas fa-cog"></i></span>
