fix: add closing tags and main section

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+  
     <!--- navigation bar -->
     <nav class="sidebar">
       <ul class="sidebar-nav">
@@ -43,5 +44,8 @@
       </ul>
     </nav>
 
-    
+    <!-- main page -->
+    <main class="main-section">
     </main>
+  </body>
+</html>
