--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,7 +251,7 @@ body {
   width: 50px;
   height: 100%;
   border: none;
-  color: #fff;
+  color: #ffffff;
   margin-left: 5px;
   font-size: 20px;
   outline: none;
@@ -302,3 +302,89 @@ body {
   color: white;
 }
 
+/* Calendar page */
+.container {
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 91.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  color: #ffffff;
+  width: 45rem;
+  height: 50rem;
+  background-color: #121212;
+}
+
+.month {
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #bb86fc;
+  color: #121212;
+  padding: 0 2rem;
+  text-align: center;
+}
+
+.month i {
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.month h1 {
+  font-size: 30px;
+}
+
+.date {
+  line-height: 100%;
+}
+
+.weekdays {
+  width: 100%;
+  display: flex;
+  padding: 0 0.5rem;
+  height: 5rem;
+  align-items: center;
+  background-color: #555;
+}
+
+.weekdays div {
+  width: calc(45rem / 7);
+  display: flex;
+  letter-spacing: 0.1rem;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
+.days {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.2rem;
+}
+
+.days div {
+  margin: 0.3rem;
+  width: calc(46rem / 8);
+  height: 5.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.days div:hover {
+  background-color: #bb86fc;
+}
+
+.prev-date,
+.next-date {
+  opacity: 0.5;
+}
