--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -91,7 +91,7 @@
             <div>16</div>
             <div>17</div>
             <div>18</div>
-            <div>19</div>
+            <div class="today">19</div>
             <div>20</div>
             <div>21</div>
             <div>22</div>
