feat: redirect to calendar page when it's clicked

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -24,7 +24,7 @@
           </a>
         </li>
         <li>
-          <a class="sidebar-link" href="">
+          <a class="sidebar-link" href="/calendar">
           <span class="icon"><i class="fas fa-calendar-alt"></i></span>
           <span class="title">Calendar</span>
           </a>
