--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -52,7 +52,7 @@
             <i class="fas fa-angle-left
              prev"></i>
             <div class="date">
-              <h1>May</h1>
+              <h1></h1>
               <p>Fri May 29, 2020</p>
             </div>
             <i class="fas fa-angle-right
@@ -113,6 +113,7 @@
           </div>
         </div>
       </div>
+      <script src="/static/js/calendar.js"></script>
     </main>
   </body>
 </html>
