fix: change tasks title from 'settings' to 'tasks'

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,7 +4,7 @@
     <meta charset="utf=8" />
     <metaname ="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/static/css/style.css" />
-    <title>Settings</title>
+    <title>Tasks</title>
     <!-- Required to import fontawesome icons -->
     <script
       src="https://kit.fontawesome.com/c20afc23a5.js"
