--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -29,6 +29,12 @@
           <span class="title">Calendar</span>
           </a>
         </li>
+        <li>
+          <a class="sidebar-link" href="">
+          <span class="icon"><i class="fas fa-book-open"></i></span>
+          <span class="title">Notes</span>
+          </a>
+        </li>
         <li class="sidebar-item">
           <a class="sidebar-link" href="/settings">
             <span class="icon"><i class="fas fa-cog"></i></span>
