--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li>
-          <a class="sidebar-link" href="">
+          <a class="sidebar-link" href="/notes">
           <span class="icon"><i class="fas fa-book-open"></i></span>
           <span class="title">Notes</span>
           </a>
