feat: add notes title and button

--- a/templates/notes.html
+++ b/templates/notes.html
@@ -50,5 +50,17 @@
       </ul>
     </nav>
 
+    <!-- Main section -->
+    <main class="main-section">
+        <div class="notes-container">
+          <div class="notes-page-heading">
+            <h1>All Notes</h1>
+          </div>
+          <div class="submit-button">
+            <button action="/add" method="post">Add a note</button>
+          </div>
+        </div>
+    </main>
+
   </body>
 </html>
