feat: add sign in with google

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf=8" />
-    <metaname ="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-signin-client_id"
+      content="178100631317-7kk5edr08pptqi100dp344ug1mhc3thi.apps.googleusercontent.com"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{url_for('static', filename='css/style.css')}}"
+    />
     <title>Login</title>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script>
+      function onSignIn(googleUser) {
+        // var profile = googleUser.getBasicProfile();
+        // console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        // console.log('Name: ' + profile.getName());
+        // console.log('Image URL: ' + profile.getImageUrl());
+        // console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+        // Get user's id token
+        var id_token = googleUser.getAuthResponse().id_token;
+
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "http://localhost:5000/googlesignin");
+        xhr.setRequestHeader(
+          "Content-Type",
+          "application/x-www-form-urlencoded"
+        );
+        xhr.onload = function () {
+          console.log("Signed in as: " + xhr.responseText);
+          window.location.replace("http://localhost:5000/tasks")
+        };
+        xhr.send("idtoken=" + id_token);
+      }
+    </script>
   </head>
 
   <body>
@@ -48,6 +81,7 @@
           <button id="submit" type="submit">Login</button>
         </div>
       </form>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
     </main>
   </body>
 </html>
