feat: add static list of notes

--- a/templates/notes.html
+++ b/templates/notes.html
@@ -55,14 +55,19 @@
         <h1>All Notes</h1>
         <li>
           <ul>
-            Note 1
+            <a href="#">Note 1</a>
           </ul>
+        </li>
+        <li>
           <ul>
-            Note 2
+            <a href="#">Note 2</a>
           </ul>
+        </li>
+        <li>
           <ul>
-            Note 3
+            <a href="#">Note 3</a>
           </ul>
+        </li>
         </li>
         <div class="content">
           <div class="close-button" onclick="togglePopup()">×</div>
