--- a/templates/notes.html
+++ b/templates/notes.html
@@ -53,22 +53,24 @@
       <div class="notes-popup" id="add-note-button">
         <div class="overlay"></div>
         <h1>All Notes</h1>
-        <li>
-          <ul>
-            <a href="#">Note 1</a>
-          </ul>
-        </li>
-        <li>
-          <ul>
-            <a href="#">Note 2</a>
-          </ul>
-        </li>
-        <li>
-          <ul>
-            <a href="#">Note 3</a>
-          </ul>
-        </li>
-        </li>
+        <div class="all-notes">
+          <li>
+            <ul>
+              <a href="#">Note 1</a>
+            </ul>
+          </li>
+          <li>
+            <ul>
+              <a href="#">Note 2</a>
+            </ul>
+          </li>
+          <li>
+            <ul>
+              <a href="#">Note 3</a>
+            </ul>
+          </li>
+          </li>
+        </div>
         <div class="content">
           <div class="close-button" onclick="togglePopup()">×</div>
           <div class="notes-title-field">
