feat: add new notes to database

--- a/templates/notes.html
+++ b/templates/notes.html
@@ -74,10 +74,10 @@
         <div class="content">
           <div class="close-button" onclick="togglePopup()">×</div>
           <div class="notes-title-field">
-            <input type="text" placeholder="Your title"></input>
+            <input type="text" name="title" placeholder="Your title"></input>
           </div>
           <div class="notes-body-field">
-            <textarea></textarea>
+            <textarea name="body"></textarea>
           </div>
           <div class="submit-button">
             <button>Save</button>
