--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -10,6 +10,21 @@
       src="https://kit.fontawesome.com/c20afc23a5.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://apis.google.com/js/platform.js" async defer>
+      let signOut =  function () {
+        console.log(gapi);
+        console.log(gapi.auth2);
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {   
+          console.log('User signed out.');   
+          auth2.disconnect();  
+        });
+        auth2.disconnect();
+      }
+      (function() {
+        document.getElementById ("google-signout").addEventListener ("click", signOut, false);
+      })();
+    </script>
   </head>
 
   <body>
