--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -33,6 +33,12 @@
     <nav class="sidebar">
       <ul class="sidebar-nav">
         <li class="sidebar-item">
+          <a class="sidebar-link" href="#">
+            <span class="icon"><i class="fas fa-user-circle"></i></span>
+            <span class="title">User Profile</span>
+          </a>
+        </li>
+        <li class="sidebar-item">
           <a class="sidebar-link" href="/tasks">
             <span class="icon"><i class="fas fa-edit"></i></span>
             <span class="title">Tasks</span>
