--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,6 +32,12 @@
     <nav class="sidebar">
       <ul class="sidebar-nav">
         <li class="sidebar-item">
+          <a class="sidebar-link" href="#">
+            <span class="icon"><i class="fas fa-user-circle"></i></span>
+            <span class="title">User Profile</span>
+          </a>
+        </li>
+        <li class="sidebar-item">
           <a class="sidebar-link" href="/tasks">
             <span class="icon"><i class="fas fa-edit"></i></span>
             <span class="title">Tasks</span>
@@ -65,7 +71,9 @@
     </nav>
 
     <main class="main-section">
-        
+      <div class="profile-container">
+        <h1> Welcome, { User }</h1>
+      </div>
     </main>
   </body>
 </html>
