--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -33,7 +33,7 @@
     <nav class="sidebar">
       <ul class="sidebar-nav">
         <li class="sidebar-item">
-          <a class="sidebar-link" href="#">
+          <a class="sidebar-link" href="/profile">
             <span class="icon"><i class="fas fa-user-circle"></i></span>
             <span class="title">User Profile</span>
           </a>
