feat: profile page displays current user's username

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -72,7 +72,10 @@
 
     <main class="main-section">
       <div class="profile-container">
-        <h1> Welcome, { User }</h1>
+        <h1> Welcome, {{ username }}</h1>
+        <div class="profile-details-container">
+          
+        </div>
       </div>
     </main>
   </body>
