--- a/static/css/style.css
+++ b/static/css/style.css
@@ -561,7 +561,9 @@ body {
 }
 
 .container #custom-btn{
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 50px;
   height: 50px;
   border: none;
