feat: store user image to database

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -76,7 +76,7 @@
         <div class="container">
           <div class="wrapper">
              <div class="image">
-                <img src="" alt="">
+                <img src="data:;base64,{{user_image.rendered_data}}" alt="Your profile picture">
              </div>
              <div class="content">
              </div>
