feat: add first name and last name during registration for user

--- a/templates/register.html
+++ b/templates/register.html
@@ -22,6 +22,28 @@
       <div class="page-header">Register</div>
 
       <form class="register-form" action="/register" method="post">
+        <!-- first name -->
+        <div class="form-input">
+          <input
+            type="text"
+            id="name"
+            name="first_name"
+            placeholder="First Name"
+            autocomplete="off"
+            autofocus
+          />
+        </div>
+        <!-- last name -->
+        <div class="form-input">
+          <input
+            type="text"
+            id="name"
+            name="last_name"
+            placeholder="Last Name"
+            autocomplete="off"
+            autofocus
+          />
+        </div>
         <!-- username -->
         <div class="form-input">
           <input
