--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -73,7 +73,7 @@
 
     <!-- main page -->
     <main class="main-section">
-      <div class="container">
+      <div class="calendar-container">
         <div class="calendar">
           <div class="month">
             <i class="fas fa-angle-left
