--- a/templates/profile.html
+++ b/templates/profile.html
@@ -74,7 +74,7 @@
       <div class="profile-container">
         <h1> Welcome, {{ username }}</h1>
         <div class="container">
-          <div class="wrapper">
+          <div class="profile-wrapper">
              <div class="image">
                 <img src="data:;base64,{{user_image.rendered_data}}" alt="Your profile picture">
              </div>
