--- a/templates/notes.html
+++ b/templates/notes.html
@@ -41,7 +41,7 @@
           {% for notes in users_notes %}
             <ul class="list-items">
               <a class="notes-title" href="/notepage/{{ notes.id }}">{{ notes.title }}</a>
-              <a class="delete-note" href="/delete-task/{{ notes.id }}"><i class="fas fa-trash"></i></a>
+              <a class="delete-note" href="/delete-note/{{ notes.id }}"><i class="fas fa-trash"></i></a>
             </ul>
           {% endfor %}
         </div>
