--- a/templates/profile.html
+++ b/templates/profile.html
@@ -39,18 +39,16 @@
              <div class="image">
                 <img src="data:;base64,{{user_image.rendered_data}}" alt="Your profile picture">
              </div>
-             <div class="content">
-             </div>
           </div>
-          <form name="uploadImageForm" method="POST" action="/upload-image" enctype="multipart/form-data">
+          <form class="profile-update-container" name="uploadImageForm" method="POST" action="/upload-image" enctype="multipart/form-data">
             <label id="custom-btn">
               <i class="fas fa-camera"></i>
               <input id="default-btn" type="file" name="image" hidden/>
             </label>
-            <button type="submit">Submit</button>
+            <button class="profile-save-button" type="submit">Save</button>
           </form>
         </div>
-        <h1> {{ full_name }}</h1>
+        <h1>{{ full_name }}</h1>
       </div>
     </main>
     
