--- a/templates/notepage.html
+++ b/templates/notepage.html
@@ -32,8 +32,8 @@
     {% include 'navbar.html' %}
 
     <main class="main-section">
-        <h1>{{ notes_item.title }}</h1>
-        <p>{{ notes_item.body }}</p>
+        <h1 class="each-note-title">{{ notes_item.title }}</h1>
+        <p class="each-note-body">{{ notes_item.body }}</p>
     </main>
   </body>
 </html>
