--- a/templates/settings.html
+++ b/templates/settings.html
@@ -33,7 +33,7 @@
 
     <!-- main page -->
     <main class="main-section">
-      <div class="page-header">Settings</div>
+      <h1 class="main-page-title">Settings</h1>
       <form action="/settings" method="post">
         <!-- Old Password -->
         <div class="form-input">
