--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'JetBrains Mono', sans-serif;
+  background-color: #1b141d;
   margin: 0;
   padding: 0;
 }
@@ -16,7 +17,7 @@ body {
   position: relative;
   justify-content: space-between;
   align-items: center;
-  background-color:#121212;
+  background-color:#33333d;
   color: #ffffff;
 }
 
@@ -109,7 +110,7 @@ body {
   left: 0;
   width: 60px;
   height: 100vh;
-  background: #121212;
+  background: #33333d;
   transition: 0.4s ease;
   overflow: hidden;
   z-index: 1;
@@ -140,8 +141,7 @@ body {
 }
 
 .sidebar-link:hover {
-  background: #bb86fc;
-  color: #121212;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
 }
 
 .icon {
@@ -177,9 +177,9 @@ body {
   position: static;
 }
 
-.page-header {
-  font-size: 24px;
-  padding: 10px;
+.main-page-title {
+  color: #ffffff;
+  text-align: center;
 }
 
 .form-input {
@@ -204,9 +204,10 @@ body {
 }
 
 .submit-button button {
-  background-color: #bb86fc;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
   font-family: 'JetBrains Mono', sans-serif;
   font-size: 18px;
+  color: #ffffff;
   text-decoration: none;
   border: none;
   border-radius: 5px;
@@ -226,9 +227,8 @@ body {
   margin: 120px auto;
   padding: 25px;
   border-radius: 5px;
-  box-shadow: 0px 10px 15px #cfcfcf;
   color: #ffffff;
-  background-color: #121212;
+  background-color: #27242c;
 }
 
 .wrapper .input-field {
@@ -256,7 +256,7 @@ body {
   margin-left: 5px;
   font-size: 20px;
   outline: none;
-  background: #bb86fc;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
   cursor: pointer;
   opacity: 0.6;
   border-radius: 3px;
@@ -319,7 +319,7 @@ body {
   color: #ffffff;
   width: 45rem;
   height: 50rem;
-  background-color: #121212;
+  background-color: #27242c;
 }
 
 .month {
@@ -328,8 +328,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #bb86fc;
-  color: #121212;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
+  color: #27242c;
   padding: 0 2rem;
   text-align: center;
 }
@@ -353,7 +353,7 @@ body {
   padding: 0 0.5rem;
   height: 5rem;
   align-items: center;
-  background-color: #555;
+  background-color: #27242c;
 }
 
 .weekdays div {
@@ -391,21 +391,23 @@ body {
 }
 
 .today {
-  background-color: #bb86fc;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
 }
 
 /* Notes page */
-
-
 .notes-popup .overlay {
   position: fixed;
   top: 0px;
   left: 0px;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.7);
+  background: #27242c;
   z-index: 1;
   display: none;
+}
+
+.notes-title {
+  color: #ffffff;
 }
  
 .notes-popup .content {
@@ -413,7 +415,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%) scale(0);
-  background: #121212;
+  background: #27242c;
   width: 95%;
   max-width: 700px;
   height: 95%;
@@ -431,8 +433,8 @@ body {
   top: 20px;
   width: 30px;
   height: 30px;
-  background: #bb86fc;;
-  color: #121212;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
+  color: #27242c;
   font-size: 25px;
   line-height: 30px;
   text-align: center;
@@ -451,8 +453,8 @@ body {
 .add-note-button {
   padding: 15px;
   font-size: 18px;
-  color: #121212;
-  background-color: #bb86fc;
+  color: #ffffff;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
   font-family: 'JetBrains Mono', sans-serif;
   font-size: 18px;
   text-decoration: none;
@@ -495,7 +497,6 @@ body {
 
 .all-notes li {
   list-style: none;
-  padding: 0px 0px 0px 10px;
   font-family: 'JetBrains Mono', sans-serif;
   font-size: 18px;
 }
@@ -508,7 +509,7 @@ body {
 }
 
 .save button {
-  background-color: #bb86fc;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
   font-family: 'JetBrains Mono', sans-serif;
   font-size: 18px;
   text-decoration: none;
@@ -541,6 +542,14 @@ body {
   cursor: pointer;
 }
 
+.each-note-title {
+  color: #ffffff;
+}
+
+.each-note-body {
+  color: #ffffff;
+}
+
 .fa-trash {
   color: white;
 }
@@ -552,6 +561,16 @@ body {
 
 .profile-container h1{
   text-align: center;
+  color: #ffffff;
+}
+
+.container {
+  max-width: 400px;
+  width: 100%;
+  padding: 25px;
+  border-radius: 5px;
+  color: #ffffff;
+  background-color: #27242c;
 }
 
 .profile-wrapper{
@@ -559,7 +578,6 @@ body {
   height: 300px;
   width: 300px;
   border-radius: 50%;
-  background: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -582,25 +600,24 @@ body {
 }
 
 .profile-update-container {
-  padding: 10px;
+  padding: 25px 10px;
   display: flex;
   align-items: center;
-  flex-direction: column;
+  justify-content: space-between;
 }
-
 .container #custom-btn{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border: none;
   outline: none;
   border-radius: 3px;
   color: #ffff;
   font-size: 18px;
   cursor: pointer;
-  background-color: #bb86fc;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
   transition: 0.3s;
 }
 
@@ -609,13 +626,14 @@ body {
 }
 
 .profile-save-button {
-  background-color: #bb86fc;
+  background: linear-gradient(to right, #AD62AA, #BC6FF1);
   font-family: 'JetBrains Mono', sans-serif;
   font-size: 18px;
   text-decoration: none;
   border: none;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 10px 90px;
+  color: #ffffff;
   cursor: pointer;
   transition: all 0.3s ease;
 }
