--- a/templates/notes.html
+++ b/templates/notes.html
@@ -35,7 +35,7 @@
     <main class="main-section">
       <div class="notes-popup" id="add-note-button">
         <div class="overlay"></div>
-        <h1>All Notes</h1>
+        <h1 class="main-page-title">All Notes</h1>
         <div class="all-notes">
           <li>
           {% for notes in users_notes %}
