--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
     </nav>
 
     <main class="main-section">
-      <div class="page-header">Register</div>
+      <h1 class="main-page-title">Register</h1>
 
       <form class="register-form" action="/register" method="post">
         <!-- first name -->
