--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -33,7 +33,7 @@
 
     <main class="main-section">
         <div class="wrapper">
-            <div class="page-header">Tasks</div>
+            <h1>Tasks</h1>
             <form action="/add-task" method="post">
                 <div class="input-field">
                     <input type="text" name="title" placeholder="Add your task"></input>
